tests/snapshots/integration__integration_tests__push__push_error_with_merge_commits.snap
---
source: tests/integration_tests/push.rs
info:
  program: wt
  args:
    - push
    - main
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
[31m❌ Found merge commits in push range. Use --allow-merge-commits to push non-linear history.[0m
